--- a/Day1.4/Lesson 1.4 - Intro to Classes and Methods.ipynb
+++ b/Day1.4/Lesson 1.4 - Intro to Classes and Methods.ipynb
@@ -25,17 +25,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too bad. You are stuck here... Keep searching...\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from IPython.display import clear_output\n",
-    "import desertedIsland\n",
-    "\n"
+    "import _src.desertedIsland as desertedIsland\n",
+    "\n",
+    "days = 0\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    if days == 0:\n",
+    "        print(\"Search for food and water to survive!\")\n",
+    "    print(\"It's your \" + str(days) + \" day(s) on the island\")\n",
+    "    encounter = desertedIsland.items[np.random.randint(0,len(desertedIsland.items))]\n",
+    "    print(encounter)\n",
+    "    if encounter == \"Crocodile\":\n",
+    "        print(\"Oh no! You've been eaten by a crocodile\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"You've found a \"+encounter+\".\\nKeep searching on the island?\")\n",
+    "        decision = input(\"y/n\")\n",
+    "        clear_output()\n",
+    "        if decision == \"y\":\n",
+    "            print(\"Good choice\")\n",
+    "        elif decision == \"n\":\n",
+    "            print(\"Too bad. You are stuck here... Keep searching...\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Don't understand\")\n",
+    "    days += 1"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Object Oriented Programming\n",
     "\n",
@@ -44,13 +78,11 @@
     "One major benefit about using classes, is that if we change our parent class (the code we use to define our class variable), that change affects each instance (variables made from the parent class type) we make (instantiate) after! This way, we don't have to manually change everything in our code - a tedious endeavor.\n",
     "\n",
     "Before we practice with this, I'm going to explain how we make classes, and what the various parts of the code mean. Below is how we create a new class in Python:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +93,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The Python keyword `class` allows us to define a new class of the name `ClassName`, and the method `def __init__(self):` allows us to initialize the pieces of our class. We use the `class` keyword to define classes, and the `def` keyword to define methods. We'll talk more about methods later today.\n",
     "\n",
@@ -80,28 +114,29 @@
     "<img src=\"ArtAssets4/squareIsland.png\" width=600>\n",
     "\n",
     "Each of these squares on the map we'll call a tile. Now we could label each of these tiles, say 1-16, and have a bunch of logic in our code to handle each of these tiles, like the example below:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Where would you like to search today?1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "choice = input(\"Where would you like to search today?\")\n",
     "\n",
     "if choice == \"1\":\n",
-    "    # Tile 1 stuff here\n",
+    "    print(1)# Tile 1 stuff here\n",
     "elif choice == \"2\":\n",
-    "    # Tile 2 stuff here\n",
-    "elif choice == \"3\":\n",
-    "    # Tile 3 stuff here\n",
-    "elif choice == \"4\":\n",
-    "    # Tile 4 stuff here\n",
-    "else if:\n",
-    "    # It goes on and on..."
+    "    print(1)# Tile 1 stuff here"
    ]
   },
   {
@@ -115,10 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class IslandTile:\n",
+    "    \n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,10 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "the_temple = IslandTile(\"temple\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,10 +186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'temple'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_temple.name"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,15 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class IslandTile:\r\n",
-    "    \r\n",
-    "    def __init__(self, name):\r\n",
-    "        self.name = name\r\n",
-    "        # New stuff goes here"
+    "class IslandTile:\n",
+    "    \n",
+    "    def __init__(self,name,items,description):\n",
+    "        self.name = name\n",
+    "        # New stuff goes here\n",
+    "        self.items = items\n",
+    "        self.description = description"
    ]
   },
   {
@@ -181,13 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Instantiate a new temple with the updated IslandTile class\n",
     "temple = IslandTile(\"the Temple\", \n",
-    "                    (\"Golden Monkey Statuette\",) ,\n",
+    "                    \"Golden Monkey Statuette\",\n",
     "                    \"As you push your way through the thick vegetation, you stumble upon an ancient temple standing stalwart in a small clearing. The area around the temple seems quiet. Too quiet...\")"
    ]
   },
@@ -200,11 +258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the Temple\n",
+      "Golden Monkey Statuette\n",
+      "As you push your way through the thick vegetation, you stumble upon an ancient temple standing stalwart in a small clearing. The area around the temple seems quiet. Too quiet...\n"
+     ]
+    }
+   ],
    "source": [
-    "#Test the Temple here\n"
+    "#Test the Temple here\n",
+    "print(temple.name)\n",
+    "print(temple.items)\n",
+    "print(temple.description)"
    ]
   },
   {
@@ -226,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,8 +308,11 @@
     "        self.name = name\n",
     "        self.items = items\n",
     "        self.description = description\n",
+    "        self.discovered = False\n",
     "\n",
-    "    # New stuff goes here"
+    "    # New stuff goes here\n",
+    "    def discovered(self):\n",
+    "        print (name + \"is being discovered\")"
    ]
   },
   {
@@ -256,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,13 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "#test your .discover() method here\n",
     "print(temple.discovered)\n",
-    "temple.discover()\n",
     "print(temple.discovered)"
    ]
   },
@@ -286,16 +368,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Where would you like to search today? temple\n",
+      "you are discovering temple\n"
+     ]
+    }
+   ],
    "source": [
     "choice = input(\"Where would you like to search today? \")\n",
     "\n",
     "temple.discovered = False\n",
     "\n",
     "if choice == \"temple\":\n",
-    "    # Discover logic"
+    "    print (\"you are discovering \" + choice)\n",
+    "    # Discover logic\n"
    ]
   },
   {
@@ -311,9 +403,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Where would you like to search today?choice\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'beach' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-8293492f0a74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mcamp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiscover\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mbeach\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiscovered\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You have entered \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mbeach\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'beach' is not defined"
+     ]
+    }
+   ],
    "source": [
     "choice = input(\"Where would you like to search today?\")\n",
     "\n",
@@ -355,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,12 +482,13 @@
     "        self.discovered = False\n",
     "        \n",
     "    def enterTile(self):\n",
-    "        # Logic "
+    "        # Logic \n",
+    "        print (\"You enter the \" + self.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,9 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You enter the the Temple\n"
+     ]
+    }
+   ],
    "source": [
     "#Test the .enterTile() method here\n",
     "temple.enterTile()"
@@ -411,11 +531,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#add the .search() method to your IslandTile class here\n",
+    "import _src.desertedIsland as desertedIsland\n",
     "class IslandTile:\n",
     "    \n",
     "    def __init__(self, name, items, description):\n",
@@ -431,13 +551,15 @@
     "        else:\n",
     "            self.discovered = True\n",
     "            print(self.description)\n",
-    "            \n",
+    "    \n",
+    "    def search(self):\n",
+    "        print (\"you have found \"+items[1])\n",
     "    # Add a search method here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,9 +571,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'items' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-df12c899e422>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#This should show us what we've found in the temple!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtemple\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-24-4460fa22e6f8>\u001b[0m in \u001b[0;36msearch\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"you have found \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0;31m# Add a search method here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'items' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#This should show us what we've found in the temple!\n",
     "temple.search()"
@@ -554,13 +689,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Run a few tests here"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -617,9 +752,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "2501a11da06b4af3b297d00f3b3a44f3a9b21649d06de7879c05f261575933a8"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.5 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -631,10 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  },
-  "interpreter": {
-   "hash": "2501a11da06b4af3b297d00f3b3a44f3a9b21649d06de7879c05f261575933a8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
