--- a/Day1.4/Activity 1.4 - Escape the Island Free Design.ipynb
+++ b/Day1.4/Activity 1.4 - Escape the Island Free Design.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "    def enterTile(self):\n",
     "        #Your code here\n",
     "        if self.discovered:\n",
-    "            print(\"You enter the \"+self.name)\n",
+    "            print(\"You enter the \"+ self.name)\n",
     "        else:\n",
     "            print(self.description)\n",
     "            self.discovered = True\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good choice, maybe you'll survive another day.\n",
+      "Days on the deserted island: 1\n",
+      "Where would you like to search today? (temple, spring, beach, ravine, camp): temple\n",
+      "As you push your way through the thick vegetation, you stumble upon an ancient Temple standing stalwart in a small clearing. The area around the temple seems quiet. Too quiet...\n",
+      "You encounter Boulder Trap and find Golden Monkey Statuette\n",
+      "After a long day of searching, you leave the Temple and head back to camp\n"
+     ]
+    }
+   ],
    "source": [
     "import _src.desertedIsland\n",
     "import numpy as np\n",
@@ -195,9 +208,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "2501a11da06b4af3b297d00f3b3a44f3a9b21649d06de7879c05f261575933a8"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.5 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -209,10 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  },
-  "interpreter": {
-   "hash": "2501a11da06b4af3b297d00f3b3a44f3a9b21649d06de7879c05f261575933a8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
